Add CourseSchedule Solution